# sagan-ng

./: .travis.yml  README.md  configure.ac
src/: Makefile.am  batch.c  batch.h  classifications.c  classifications.h  config-yaml.c  config-yaml.h  counters.h  debug.h  lockfile.c  output.c  output.h  processor.c  processor.h  rules.c  rules.h  sagan-config.h  sagan-ng-defs.h  sagan-ng.c  sagan-ng.h  signal-handler.c  signal-handler.h  util.c  util.h  var.h
src/input-plugins/: named-pipe.c  named-pipe.h
src/output-plugins/: file.c  file.h
src/parsers/: json.c  json.h  search-case.c  search.c  search.h
src/parsers/strstr-asm/: strstr-hook.c
src/processors/: engine.c
src/processors/.deps/: sagan_ng-engine.Po
